--- a/index.html
+++ b/index.html
@@ -1,46 +1,53 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
-  <title>jQuery Demo</title>
-  <link rel="stylesheet" href="css/style.css">
+  <meta charset="UTF-8">
+  <title>Dragonball RPG!</title>
+  <!-- Latest compiled and minified CSS -->
+
+
+  <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <body>
-
-    <header>
-        <img src="assets/images/swrpg.png">
-      </header>
-      <div class="container" id="main-game-section">
-        <div class="container col-lg-12" id="characters-section">
-          <div class="container section-title">Select Your Character</div>
+  <header>
+  </header>
+  <div id="main-game-section">
+    <div class="row" id="characters-section">
+      <div class="container section-title">Select Your Character</div>
+    </div>
+<div class="row">
+        <div class="row" id="selected-character-section">
+        <div class="section-title container"></div>
+        <div id="selected-character"></div>
         </div>
-        <div class="container col-lg-4" id="selected-character-section">
-          <div class="section-title container"></div>
-          <div id="selected-character"></div>
-        </div>
-         <div class="section-title container col-lg-4">Fight Section
+        <div>Fight Section
             <div id="fight-section">
-                  <button class="btn" id="attack-button">Attack</button>
-                  <div class="jumbotron" id="gameMessage"></div>
+                <button class="btn" id="attack-button">Attack</button>
+                <div class="messageArea" id="gameMessage"></div>
             </div>   
         </div>	
         <div id="action">
-          <div class="character-section">
-            <div class="container section-title col-lg-3">
+        <div class="character-section">
+            <div>
                 <div id="defender"></div>
             </div>	
-          </div>
-        </div>    
-        <div class="container" id="available-to-attack-section">
-          <div class="section-title"></div>
         </div>
+        </div> 
+    </div>   
+    <div class="row" id="available-to-attack-section">
+      <div class="section-title"></div>
+    </div>
 
 
 
+<!--     <div class="" id="gameMessage"></div>
+ -->
+  </div>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-<script src="js/script.js"></script>
+  <script type="text/javascript" src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
+  <script type="text/javascript" src="js/script.js"></script>
 </body>
 
 </html>
