--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
 
   <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Fjalla+One" rel="stylesheet">
 </head>
 
 <body>
@@ -17,17 +18,12 @@
     <div class="row" id="characters-section">
       <div class="container section-title">Select Your Character</div>
     </div>
-<div class="row">
-        <div class="row" id="selected-character-section">
+<div class="row fight-area">
+        <div class="" id="selected-character-section">
         <div class="section-title container"></div>
         <div id="selected-character"></div>
         </div>
-        <div>Fight Section
-            <div id="fight-section">
-                <button class="btn" id="attack-button">Attack</button>
-                <div class="messageArea" id="gameMessage"></div>
-            </div>   
-        </div>	
+        <button class="btn" id="attack-button">Attack</button>
         <div id="action">
         <div class="character-section">
             <div>
@@ -35,7 +31,13 @@
             </div>	
         </div>
         </div> 
-    </div>   
+    </div> 
+    <div>
+            <div id="fight-content">
+               
+                <div class="messageArea" id="gameMessage"></div>
+            </div>   
+    </div>  
     <div class="row" id="available-to-attack-section">
       <div class="section-title"></div>
     </div>
