--- a/index.html
+++ b/index.html
@@ -4,55 +4,51 @@
 <head>
   <meta charset="UTF-8">
   <title>Dragonball RPG!</title>
-  <!-- Latest compiled and minified CSS -->
-
+  <link rel="shortcut icon" type="image/ico" href="images/favicon.ico" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.0/jquery-confirm.min.css">
   <link rel="stylesheet" href="css/jquery-confirm.min.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Fjalla+One" rel="stylesheet">
- 
+
 </head>
 
 <body>
+  <div class="overlay">
+    <h1 class="victoryHeading victoryHeading--primary">You Win!</h1>
+
+    <h2 class="victoryHeading victoryHeading--secondary">You survived with
+      <span class="player-health"></span> HP</h2>
+  </div>
+  <div class="overlay-lose">
+      <h1 class="victoryHeading victoryHeading--primary">You Lose!</h1>
   
-  <header>
-  </header>
+      <h2 class="victoryHeading victoryHeading--secondary">You survived with
+        <span class="player-health"></span> HP</h2>
+    </div>
   <div id="main-game-section">
+    <h1 class="main-heading">Select Your Character</h1>
     <div class="row" id="characters-section">
-      <div class="container section-title">Select Your Character</div>
+
     </div>
-<div class="row fight-area">
-        <div class="" id="selected-character-section">
-        <div class="section-title container"></div>
+    <div class="row fight-area">
+      <div id="selected-character-section">
         <div id="selected-character"></div>
-        </div>
-        <button class="btn" id="attack-button">Attack</button>
-        <audio id="defeat" preload="auto" src="assets/sounds/defeat.wav"></audio>
-        <audio id="punch" preload="auto" src="assets/sounds/mediumpunch.wav"></audio>
-        <audio id="miss" preload="auto" src="assets/sounds/meleemiss.wav"></audio>
-        <audio id="victory" preload="auto" src="assets/sounds/victory.wav"></audio>
-        <div id="action">
+      </div>
+      <button class="btn" id="attack-button">Attack</button>
+      <div id="action">
         <div class="character-section">
-            <div>
-                <div id="defender"></div>
-            </div>	
+          <div>
+            <div id="defender"></div>
+          </div>
         </div>
-        </div> 
-    </div> 
+      </div>
+    </div>
     <div>
-            <div id="fight-content">
-               
-                <div class="messageArea" id="gameMessage"></div>
-            </div>   
-    </div>  
+    </div>
     <div class="row" id="available-to-attack-section">
-      <div class="section-title"></div>
+
     </div>
 
-
-
-<!--     <div class="" id="gameMessage"></div>
- -->
   </div>
 
   <script type="text/javascript" src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
