wow look at those dragonballs

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
   <div class="overlay">
     <h1 class="victoryHeading victoryHeading--primary">You Win!</h1>
 
-    <h2 class="victoryHeading victoryHeading--secondary">You survived with
+    <h2 class="victoryHeading victoryHeading--secondary"><span class="player-name"></span> survived with
       <span class="player-health"></span> HP</h2>
+      <img src="images/dragon-balls.png" alt="dragon-balls" class="dragon-balls--image">
   </div>
   <div class="overlay-lose">
       <h1 class="victoryHeading victoryHeading--primary">You Lose!</h1>
   
-      <h2 class="victoryHeading victoryHeading--secondary">You survived with
-        <span class="player-health"></span> HP</h2>
+      <h2 class="victoryHeading victoryHeading--secondary"><span class="player-name"></span> should spend more time in the gravity chamber</h2>
     </div>
   <div id="main-game-section">
     <h1 class="main-heading">Select Your Character</h1>
