--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
   <link rel="stylesheet" href="css/jquery-confirm.min.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Fjalla+One" rel="stylesheet">
-
 </head>
-
 <body>
+  <audio src="assets/sounds/victory.wav" type="audio/wav" id="victorySound"></audio>
   <div class="overlay">
     <h1 class="victoryHeading victoryHeading--primary">You Win!</h1>
 
@@ -24,6 +23,7 @@
       <h1 class="victoryHeading victoryHeading--primary">You Lose!</h1>
   
       <h2 class="victoryHeading victoryHeading--secondary"><span class="player-name"></span> should spend more time in the gravity chamber</h2>
+      <img src="images/dragon-balls.png" alt="dragon-balls" class="dragon-balls--image">
     </div>
   <div id="main-game-section">
     <h1 class="main-heading">Select Your Character</h1>
